# burrmcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  auth-migration-decision-doc.md  auth-migration-decision.md  auth-oidc-migration.md  decision-doc-auth-migration.md  decision-doc.md  demo.tape  mkdocs.yml  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml  test.yml
bench/: P0-design.md  _drivers.py  judge.py  run_p0.py  smoke_p0.py  workflows.py
bench/rubrics/: doc-coauthoring.md  security-audit.md
bench/traces/: p0_20260524T175900Z.jsonl  p0_20260524T175900Z_judged.jsonl  p0_20260524T175900Z_summary.json  p0_20260524T183700Z.jsonl  p0_20260524T183700Z_judged.jsonl  p0_20260524T183700Z_summary.json  p0_20260524T191515Z.jsonl  p0_20260524T191515Z_summary.json  p0_20260524T192319Z_summary.json
demos/: demo.tape  observability.tape  rover.tape  watch.tape
docs/: INVARIANTS.md  architecture.md  cli.md  compatibility.md  index.md  observability.md  upstream.md
docs/stylesheets/: extra.css
examples/: CURATED.md  README.md  adaptive_crag.py  adventure.py  async_hooks.py  async_persister.py  bob.example.json  burr_map_parallel.py  caller_sample.py  chargen.py  class_action.py  claude-code.example.json  codebase_audit.py  codebase_security.py  coffee_order.py  combinatoric_testing.py  combo_testing.py  custom_telemetry.py  differential_review.py  doc_coauthoring.py  elicit_confirm.py  external_tools_filesystem.py  external_tools_k8s.py  fp_check.py  full_logger.py  git_review.py  granite_guardian.py  granite_oncall.py  hamilton_features.py  http_serve.py  import_flat.py  incident_response.py  local_shell.py  mcphost.example.json  mellea_qiskit_migration.py  ml_training.py  multi_graph.py  parallel_research.py  partition_key_tenants.py  pipeline_hooks.py  (+20 more)
examples/data/codebase_security/vuln_demo/: README.md  config.py
examples/data/codebase_security/vuln_demo/app/: admin.py  crypto.py  db.py  serde.py
examples/data/combinatoric_testing/: dag.py  sut.py
examples/data/combo_testing/: checkout.py  dag.py
examples/data/hamilton_features/: features.py
examples/data/incident_response/: alert.json  deploys.json
examples/data/local_shell/: config.yaml  data.csv
examples/data/local_shell/notes/: welcome.md
examples/data/parallel_research/faqs/: deployments.md  oncall.md  secrets.md
examples/data/parallel_research/runbooks/: auth-debug.md  deploy-rollback.md  incident-response.md
examples/data/parallel_research/services/: auth.md  billing.md  deploy.md
examples/scripts/: demo_play.py  demo_recorded_trace.txt  demo_walk.py  seed_coffee_session.py
examples/skills/: README.md
examples/skills/claude-api/: ATTRIBUTION.md
examples/skills/differential-review/: ATTRIBUTION.md
examples/skills/doc-coauthoring/: ATTRIBUTION.md
examples/skills/fp-check/: ATTRIBUTION.md
examples/skills/mcp-builder/: ATTRIBUTION.md
examples/skills/security-audit/: ATTRIBUTION.md
examples/skills/skill-creator/: ATTRIBUTION.md
examples/skills/webapp-testing/: ATTRIBUTION.md
scripts/: bench_bootstrap.sh  voice_lint.py
spike/: SPIKE.md  appfile.py  incident.app  ledger.py  playground.py  smoke.py
src/burr_mcp/: __init__.py  adapter.py  cli.py  doctor.py  importing.py
src/burrmcp/: __init__.py  adapter.py  cli.py  doctor.py  importing.py  upstream.py
src/burrmcp/_experimental/: __init__.py  modes.py
src/theodosia/: __init__.py  _coercion.py  _exceptions.py  _graph_summary.py  _hinting.py  _introspect.py  _ledger.py  _recording.py  _responses.py  _session.py  _step_schema.py  _tracker.py  adapter.py  assembly.py  cli.py  doctor.py  drive.py  importing.py  ledger.py  persona.py  primer.py  testing.py  tokens.py  upstream.py
src/theodosia/_experimental/: __init__.py  modes.py
src/theodosia/cli/: __init__.py  _app.py  _branding.py  _resolve.py  _steps.py  _topology.py  reports.py  sessions.py  status.py
tests/: conftest.py  test_action_surface_instructions.py  test_adaptive_crag.py  test_adventure.py  test_assembly.py  test_async_hooks.py  test_async_persister.py  test_branching.py  test_burr_map_parallel.py  test_burr_ui_url.py  test_caller_sample.py  test_chaos.py  test_chargen.py  test_class_action.py  test_cli.py  test_cli_sessions.py  test_codebase_security.py  test_coffee_order.py  test_combinatoric_testing.py  test_combo_testing.py  test_custom_telemetry.py  test_differential_review.py  test_doc_coauthoring.py  test_doctor.py  test_dynamic_mode.py  test_dynamic_per_session.py  test_dynamic_refusal_parity.py  test_elicit_confirm.py  test_eviction.py  test_external_tools.py  test_fork_at.py  test_fork_from_past.py  test_fork_from_past_partition_binding.py  test_fp_check.py  test_full_logger.py  test_git_review.py  test_granite_guardian.py  test_granite_oncall.py  test_graph_resource.py  test_hamilton_features.py  (+63 more)
tests/smoke/: _fake_k8s_server.py  _helpers.py  conftest.py  test_bench_walk.py  test_caller_sample.py  test_demos.py  test_elicit_confirm.py  test_external_tools_federation.py  test_external_tools_filesystem.py  test_skill_workflows.py  test_upstream_filesystem_live.py
website/: astro.config.mjs  package-lock.json  package.json
website/public/: llms.txt
website/src/components/: DocsBanner.astro  DocsContentHeader.astro  DocsHeader.astro  DocsSidebar.astro  MechanismDiagram.astro
website/src/content/docs/: architecture.md  authoring.md  benchmark.md  case-study.md  cli.md  compatibility.md  deployment.md  examples.md  index.md  index.mdx  introduction.md  observability.md  personas.md  refusals.md  research-foundation.md  security-model.md  sessions.md  tools.md  tutorial.md  upstream.md
website/src/lib/: site.ts
website/src/pages/: index.astro
website/src/styles/: theodosia-overrides.css  theodosia.css
