[project]
name = "burr-mcp"
version = "1.1.0"
description = "Mount Burr Applications as MCP servers. FSM-as-API, not tools-as-API."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
authors = [
    { name = "Adam Munawar Rahman", email = "msrahmanadam@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Burr's public API is stable, but burr-mcp depends on some details
    # that aren't part of Burr's public surface: ``Action.fn``, the shape
    # of ``Action.inputs`` as a (required, optional) tuple, and Burr's
    # internal ``__PRIOR_STEP`` state key. Pin to a minor range so a
    # Burr release that changes any of these fails install rather than
    # breaking silently. Bump the upper bound when we've verified.
    "burr>=0.40.2,<0.41",
    "fastmcp>=3.2,<3.3",
    "pydantic>=2,<3",
]

[project.scripts]
burr-mcp = "burr_mcp.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burr_mcp"]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
