[project]
name = "burrmcp"
version = "1.12.0"
description = "Mount Burr state-machine Applications as MCP servers."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
authors = [
    { name = "Adam Munawar Rahman", email = "msrahmanadam@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Burr's public API is stable, but burrmcp depends on some details
    # that aren't part of Burr's public surface: ``Action.fn``, the shape
    # of ``Action.inputs`` as a (required, optional) tuple, and Burr's
    # internal ``__PRIOR_STEP`` state key. Pin to a minor range so a
    # Burr release that changes any of these fails install rather than
    # breaking silently. Bump the upper bound when we've verified.
    "burr>=0.40.2,<0.41",
    "fastmcp>=3.2,<3.3",
    "pydantic>=2,<3",
    # Typer for the burrmcp CLI (serve, doctor). Brings click as a
    # transitive; that's fine.
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
# Turnkey OpenTelemetry: pulls Burr's opentelemetry extra plus the
# core OTel API/SDK so a user can wire spans into their burrmcp
# server in one ``pip install 'burrmcp[observability]'``. See
# ``examples/with_otel.py`` for the wire-up pattern.
observability = [
    "burr[opentelemetry]>=0.40.2,<0.41",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

# Mellea for the mellea_qiskit_migration demo. Also needs an Ollama
# runtime with `ollama pull granite4:micro` (runtime, not a Python dep).
mellea = [
    "mellea>=0.1",
]

# Convenience extra: install everything optional.
all = [
    "burrmcp[observability]",
    "burrmcp[mellea]",
]

[project.scripts]
burrmcp = "burrmcp.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burrmcp"]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15",
    "mypy>=1.10",
    # OTel testing uses the in-memory exporter; the [observability]
    # extra carries the rest.
    "burrmcp[observability]",
    # Example-demo deps: psutil for unix_health, bandit + detect-secrets
    # for codebase_security. Dev-only because the examples are not
    # part of the published wheel; end users running those demos
    # install them separately.
    "psutil>=5.9",
    "bandit>=1.8",
    "detect-secrets>=1.5",
    "sf-hamilton>=1.0,<2.0",
    "claude-agent-sdk>=0.2.82",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = [
    # Shipped sample data: Hamilton DAGs and SUT modules used as
    # fixtures by the testing demos. They use sys.path tricks to be
    # importable from the demo and aren't part of the codebase proper.
    "examples/data",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RUF", "PERF", "PIE", "RET"]

[tool.ruff.lint.per-file-ignores]
# Tests insert examples/ into sys.path before importing the demo modules.
"tests/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "smoke: integration tests that drive a real Claude session via the Agent SDK against the demo bench (deselected by default; run with `pytest -m smoke`)",
]
addopts = "-m 'not smoke'"
