[project]
name = "theodosia"
version = "0.3.0"
description = "Mount Burr state-machine Applications as MCP servers."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE.md"]
authors = [
    { name = "Adam Munawar Rahman", email = "msrahmanadam@gmail.com" },
]
keywords = [
    "mcp",
    "burr",
    "state-machine",
    "fsm",
    "agent",
    "llm",
    "fastmcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "apache-burr[tracking]>=0.42,<1.0",
    "fastmcp>=3.3,<4.0",
    "pydantic>=2,<3",
    "typer>=0.12,<1.0",
]
# Upper bounds are at the next semver major: Burr is still 0.x (which by
# convention may break between minors, so users sharing a venv with newer
# Burr may need to pin tighter at deploy), FastMCP follows semver. CI
# tests against ``apache-burr==0.42`` and ``fastmcp==3.3`` today; if a
# minor release breaks the integration we will pin tighter and document
# the break in CHANGELOG.

[project.urls]
Homepage = "https://github.com/msradam/theodosia"
Repository = "https://github.com/msradam/theodosia"
Documentation = "https://github.com/msradam/theodosia#readme"
Issues = "https://github.com/msradam/theodosia/issues"
Changelog = "https://github.com/msradam/theodosia/blob/main/CHANGELOG.md"

[project.optional-dependencies]
observability = [
    "apache-burr[opentelemetry]>=0.42,<1.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
ui = [
    "apache-burr[start]>=0.42,<1.0",
]
mellea = [
    "mellea>=0.1",
]
claude = [
    "anthropic>=0.40",
]
all = [
    "theodosia[observability]",
    "theodosia[mellea]",
    "theodosia[ui]",
    "theodosia[claude]",
]

[project.scripts]
theodosia = "theodosia.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/theodosia"]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5",
    "ruff>=0.15",
    "mypy>=1.10",
    "theodosia[observability]",
    "psutil>=5.9",
    "bandit>=1.8",
    "detect-secrets>=1.5",
    "sf-hamilton>=1.0,<2.0",
    "claude-agent-sdk>=0.2.82",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = ["examples/data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RUF", "PERF", "PIE", "RET", "FURB"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["_experimental/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "smoke: integration tests that drive a real Claude session via the Agent SDK against the demo bench (deselected by default; run with `pytest -m smoke`)",
]
addopts = "-m 'not smoke'"

[tool.coverage.run]
source = ["theodosia"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]
